Fixed mobile body overflow issue

--- a/easy-sidebar.css
+++ b/easy-sidebar.css
@@ -99,3 +99,9 @@ body.toggled {
 	display: block;
 	width: 100%;
 }
+
+@media (max-width:  768px) {
+	body.toggled {
+		position: fixed;
+	}
+}
